fixed styling on mobile

--- a/code/src/index.css
+++ b/code/src/index.css
@@ -30,7 +30,7 @@ html {
  .main-container {
    background-color: #548e6679;
    width: 100vw;
-   height: 500px;
+   height: 600px;
    display: flex;
    flex-direction: column;
    justify-content: center;
